src/tests/text_document/snapshots/texlab__tests__text_document__completion__color_model_definition_simple.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\definecolor{foo}{}\n%CUR                   ^\"#)?"
---
[
  {
    "kind": 1,
    "label": "HTML",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "HTML"
    }
  },
  {
    "kind": 1,
    "label": "RGB",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "RGB"
    }
  },
  {
    "kind": 1,
    "label": "cmyk",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "cmyk"
    }
  },
  {
    "kind": 1,
    "label": "gray",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "gray"
    }
  },
  {
    "kind": 1,
    "label": "rgb",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "rgb"
    }
  }
]
