src/tests/text_document/snapshots/texlab__tests__text_document__completion__color_simple.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\color{}\n%CUR        ^\"#)?"
---
[
  {
    "kind": 1,
    "label": "Apricot",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Apricot"
    }
  },
  {
    "kind": 1,
    "label": "Aquamarine",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Aquamarine"
    }
  },
  {
    "kind": 1,
    "label": "Bittersweet",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Bittersweet"
    }
  },
  {
    "kind": 1,
    "label": "Black",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Black"
    }
  },
  {
    "kind": 1,
    "label": "Blue",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Blue"
    }
  }
]
