src/tests/text_document/snapshots/texlab__tests__text_document__completion__component_environment_class.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\documentclass{article}\n%SRC \\begin{thein}\n%CUR           ^\n%1.1        ^^^^^\"#)?"
---
[
  {
    "detail": "article.cls",
    "kind": 1,
    "label": "theindex",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "theindex"
    }
  }
]
