src/tests/text_document/snapshots/texlab__tests__text_document__completion__component_environment_command_definition.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\newcommand{\\foo}{\\begin{doc}\n%CUR                            ^\n%1.1                          ^^^\"#)?"
---
[
  {
    "detail": "built-in",
    "kind": 1,
    "label": "document",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "document"
    }
  }
]
