src/tests/text_document/snapshots/texlab__tests__text_document__completion__component_environment_simple_end.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\begin{document}\n%SRC \\end{\n%CUR      ^\"#)?"
---
[
  {
    "detail": "built-in",
    "kind": 1,
    "label": "document",
    "preselect": true,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "document"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "abstract",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "abstract"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "array",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "array"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "center",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "center"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "csname",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "csname"
    }
  }
]
